--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@lucide/astro": "^0.540.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "astro": "^5.11.1",
-    "miporfolio": "file:"
+    "lucide-react": "^0.540.0",
+    "miporfolio": "file:",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
